@@ -11,6 +11,7 @@
 * Fix - New Email Notifications cloned blank for assigned values.
 * Fix - Empty checkboxes value in view entry form details.
 * Fix - Payment Multiple choices and checkboxes fields amount preview in form builder area.
+* Feature - Column Adjustment feature has been added to Everest Form Entries Table.
 
 = 1.7.4 - 11-03-2021 =
 * Fix - Hide empty select data field from entry view.
